--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"express": "^4.18.1",
 		"mongoose": "^6.3.8",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
 		"serve-favicon": "^2.5.0"
 	}
 }
