--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
-		"jsonwebtoken": "^8.5.1",
 		"helmet": "^5.1.0",
+		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.21",
 		"mime": "^3.0.0",
 		"mongoose": "^6.3.8",
 		"morgan": "^1.10.0",
