--- a/config.env
+++ b/config.env
@@ -5,5 +5,5 @@ PORT = 5000
 DATABASE = mongodb+srv://kartikey-admin:kartikey@blog.dbo4a.mongodb.net/Birma?retryWrites=true&w=majority
 
 # // JasonwebToken 
-# JWTKEY = MYNAME-IS-HELLOWORLD-AND-I-AM-FROM-PLUTO-))!!@@-NAME-IS-PLUTO
+JWTKEY = MYNAME-IS-HELLOWORLD-AND-I-AM-FROM-PLUTO-))!!@@-NAME-IS-PLUTO
 # RESETPASS_KEY = MYNAME-IS-HELLOWORLD-AND-I-AM-FROM-PLUTO-))!!@@-NAME-IS-PLUTO
