--- a/config.env
+++ b/config.env
@@ -4,6 +4,8 @@ PORT = 5000
 // Secure Database crediantail 
 DATABASE = mongodb+srv://kartikey-admin:kartikey@blog.dbo4a.mongodb.net/Birma?retryWrites=true&w=majority
 
+spreadsheetId = 130ybuV7CPQI3x_5ojFll8-Un6FZk7IbJ3eooOnpssTU
+
 # // JasonwebToken 
 JWTKEY = MYNAME-IS-HELLOWORLD-AND-I-AM-FROM-PLUTO-))!!@@-NAME-IS-PLUTO
 # RESETPASS_KEY = MYNAME-IS-HELLOWORLD-AND-I-AM-FROM-PLUTO-))!!@@-NAME-IS-PLUTO
