--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"lodash": "^4.17.21",
 		"mime": "^3.0.0",
 		"mongoose": "^6.3.8",
+		"mongoose-paginate-v2": "^1.7.0",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
 		"random-hash": "^4.0.1",
